Modify the wording in a few points.

--- a/against-tdd.html
+++ b/against-tdd.html
@@ -30,13 +30,13 @@
 </section>
 
 <section>
-<section id="slide-org38de494">
-<h2 id="org38de494"><span class="section-number-2">1</span> Problems with TDD</h2>
+<section id="slide-org41f1092">
+<h2 id="org41f1092"><span class="section-number-2">1</span> Problems with TDD</h2>
 <ul>
 <li class="fragment roll-in">No scientific evidence that it works.</li>
 <li class="fragment roll-in">It favors a bottom-up view of the problem while most of the problems are specified in a top down manner.</li>
 <li class="fragment roll-in">This forces the programmer to make decisions early on about things that are likely to change.</li>
-<li class="fragment roll-in">This looks a lot like waterfall, undercuts the agile process benefits.</li>
+<li class="fragment roll-in">This process looks a lot like waterfall and undercuts the agile process's benefits.</li>
 
 </ul>
 </section>
