--- a/estimations.html
+++ b/estimations.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <title>Practical Advises in Software Development Time Estimation.</title>
-<meta name="author" content="(alan.ficagna@deepx.it)"/>
+<meta name="author" content="(alan.ficagna@gmail.com)"/>
 <style type="text/css">
 .underline { text-decoration: underline; }
 </style>
@@ -27,32 +27,32 @@
 <body>
 <div class="reveal">
 <div class="slides">
-<section id="sec-title-slide"><h1 class="title">Practical Advises in Software Development Time Estimation.</h1><h2 class="author">alan.ficagna@deepx.it</h2>
+<section id="sec-title-slide"><h1 class="title">Practical Advises in Software Development Time Estimation.</h1><h2 class="author">alan.ficagna@gmail.com</h2>
 </section>
 
 <section>
-<section id="slide-orgf6a655c">
-<h2 id="orgf6a655c"><span class="section-number-2">1</span> State Of The Art</h2>
+<section id="slide-orgfbd49a8">
+<h2 id="orgfbd49a8"><span class="section-number-2">1</span> State Of The Art</h2>
 <div class="outline-text-2" id="text-1">
 </div>
 <div class="slide-footer"></div>
 </section>
-<section id="slide-orgaaa4603">
-<h3 id="orgaaa4603"><span class="section-number-3">1.1</span> State Of The Art</h3>
+<section id="slide-org30d1a65">
+<h3 id="org30d1a65"><span class="section-number-3">1.1</span> State Of The Art</h3>
 <p>
 What is the lasting knowledge that we can rely on?
 </p>
 
 <div class="slide-footer"></div>
 </section>
-<section id="slide-org01ab49a">
-<h3 id="org01ab49a"><span class="section-number-3">1.2</span> Cone of Uncertainty</h3>
+<section id="slide-org7ae3017">
+<h3 id="org7ae3017"><span class="section-number-3">1.2</span> Cone of Uncertainty</h3>
 <img style="height:50vh" src="./images/rapid.jpeg">
 
 <div class="slide-footer"></div>
 </section>
-<section id="slide-org3fd8eb8">
-<h3 id="org3fd8eb8"><span class="section-number-3">1.3</span> Cone of Uncertainty</h3>
+<section id="slide-orgf8c0427">
+<h3 id="orgf8c0427"><span class="section-number-3">1.3</span> Cone of Uncertainty</h3>
 
 <div class="figure">
 <p><img src="http://www.agilenutshell.com/assets/definitions/cone-of-uncertainty.png" alt="cone-of-uncertainty.png" />
@@ -65,8 +65,8 @@ What is the lasting knowledge that we can rely on?
 
 <div class="slide-footer"></div>
 </section>
-<section id="slide-org124482d">
-<h3 id="org124482d"><span class="section-number-3">1.4</span> Wormhole of Reality</h3>
+<section id="slide-orgd33a2b9">
+<h3 id="orgd33a2b9"><span class="section-number-3">1.4</span> Wormhole of Reality</h3>
 
 <div class="figure">
 <p><img src="https://opensourceconnections.com/blog/uploads/2009/11/WormholeOfReality.jpg" alt="WormholeOfReality.jpg" />
@@ -81,8 +81,8 @@ What is the lasting knowledge that we can rely on?
 </section>
 </section>
 <section>
-<section id="slide-orgff173bd">
-<h2 id="orgff173bd"><span class="section-number-2">2</span> Practical Advises</h2>
+<section id="slide-org2470b43">
+<h2 id="org2470b43"><span class="section-number-2">2</span> Practical Advises</h2>
 <ul>
 <li class="fragment roll-in">Think probabilistically.</li>
 <li class="fragment roll-in">Make mental money bets.</li>
@@ -94,8 +94,8 @@ What is the lasting knowledge that we can rely on?
 </section>
 </section>
 <section>
-<section id="slide-org92071e2">
-<h2 id="org92071e2"><span class="section-number-2">3</span> Think Probabilistically</h2>
+<section id="slide-org2afd106">
+<h2 id="org2afd106"><span class="section-number-2">3</span> Think Probabilistically</h2>
 <ul>
 <li class="fragment roll-in">Probability models incomplete information.</li>
 
@@ -103,8 +103,8 @@ What is the lasting knowledge that we can rely on?
 
 <div class="slide-footer"></div>
 </section>
-<section id="slide-orgfa01521">
-<h3 id="orgfa01521"><span class="section-number-3">3.1</span> Airplanes</h3>
+<section id="slide-org600f101">
+<h3 id="org600f101"><span class="section-number-3">3.1</span> Airplanes</h3>
 
 <div class="figure">
 <p><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/25/Antonov_An-2_in_Vitebsk.jpg/440px-Antonov_An-2_in_Vitebsk.jpg" alt="440px-Antonov_An-2_in_Vitebsk.jpg" />
@@ -138,6 +138,18 @@ What is the lasting knowledge that we can rely on?
 </p>
 </div>
 
+<div class="slide-footer"></div>
+</section>
+</section>
+<section>
+<section id="slide-org2c46c6a">
+<h2 id="org2c46c6a"><span class="section-number-2">4</span> Make mental money bets.</h2>
+<ul>
+<li class="fragment roll-in">Increase the interval until it is meaningful.</li>
+<li class="fragment roll-in">Reduce interval until you are comfortable making a money bet.</li>
+
+</ul>
+
 </section>
 <section >
 
@@ -147,8 +159,8 @@ What is the lasting knowledge that we can rely on?
 </section>
 </section>
 <section>
-<section id="slide-org18ca386">
-<h2 id="org18ca386"><span class="section-number-2">4</span> Meta Advises</h2>
+<section id="slide-org9a305a6">
+<h2 id="org9a305a6"><span class="section-number-2">5</span> Meta Advises</h2>
 <ul>
 <li class="fragment roll-in">People hate math</li>
 <li class="fragment roll-in">Use these advises as a internal model rather than explicitly.</li>
